[dyad] Corrigi o erro 404 ao acessar o funil de conversão. Ajustei os links em `index.html` para usar o caminho relativo `./funil-conversao.html` e criei o arquivo `vite.config.js` para garantir que o roteamento de arquivos estáticos funcione corretamente no ambiente de hospedagem.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
   <!-- 1️⃣ HEADER -->
   <header class="header">
     <div class="container header__inner">
-      <a href="#" class="logo">
+      <a href="./" class="logo">
         <img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official">
       </a>
-      <a href="funil-conversao.html" class="btn btn--outline-navy">Entrar na Lista</a>
+      <a href="./funil-conversao.html" class="btn btn--outline-navy">Entrar na Lista</a>
     </div>
   </header>
 
@@ -34,7 +34,7 @@
           <h1 class="hero__headline">Tenha o iPhone 17 Pro Max na Europa.</h1>
           <p class="hero__subheadline">Junte-se a um grupo. Pague parcelas fixas. Receba o seu iPhone.</p>
           <p class="hero__mini-text">Sem banco, sem juros, sem surpresas.</p>
-          <a href="funil-conversao.html" class="btn btn--primary btn--lg">Quero minha posição</a>
+          <a href="./funil-conversao.html" class="btn btn--primary btn--lg">Quero minha posição</a>
         </div>
         <div class="hero__visual">
           <img src="images/hero-split.png" alt="iPhone 17 Pro Max" class="hero__img">
@@ -190,7 +190,7 @@
           </div>
         </div>
 
-        <a href="funil-conversao.html" class="btn btn--primary btn--lg mb-24">
+        <a href="./funil-conversao.html" class="btn btn--primary btn--lg mb-24">
           Reservar Minha Posição <i data-lucide="arrow-right" class="ml-8"></i>
         </a>
         
@@ -225,7 +225,7 @@
                 <li><i data-lucide="check" class="finance-check"></i> Isento de juros</li>
                 <li><i data-lucide="check" class="finance-check"></i> Zero taxas ocultas</li>
               </ul>
-              <a href="funil-conversao.html" class="btn btn--primary btn--full">Reservar Agora</a>
+              <a href="./funil-conversao.html" class="btn btn--primary btn--full">Reservar Agora</a>
             </div>
           </div>
           <!-- Opção 02 -->
@@ -253,7 +253,7 @@
                 <li><i data-lucide="check" class="finance-check"></i> Isento de juros</li>
                 <li><i data-lucide="check" class="finance-check"></i> Zero taxas ocultas</li>
               </ul>
-              <a href="funil-conversao.html" class="btn btn--primary btn--full">Reservar Agora</a>
+              <a href="./funil-conversao.html" class="btn btn--primary btn--full">Reservar Agora</a>
             </div>
           </div>
         </div>
@@ -506,7 +506,7 @@
                 <option value="Outro">Outro</option>
               </select>
             </div>
-            <a href="funil-conversao.html" class="btn btn--primary btn--full btn--lg mt-24">RESERVAR MINHA POSIÇÃO</a>
+            <a href="./funil-conversao.html" class="btn btn--primary btn--full btn--lg mt-24">RESERVAR MINHA POSIÇÃO</a>
           </div>
           <div class="counter-discreet">6 de 12 vagas confirmadas</div>
         </div>
