[dyad] Inseri o número de telefone oficial da empresa (+34 671 94 12 67) no rodapé do site, acompanhado pela bandeira da Espanha, reforçando a presença local e facilitando o contato direto dos clientes.

--- a/index.html
+++ b/index.html
@@ -529,6 +529,10 @@
           <li><a href="#como-funciona">Como funciona</a></li>
           <li><a href="#reservar">Lista prioritária</a></li>
           <li><a href="mailto:sales@wekota.eu">Contato</a></li>
+          <li><a href="tel:+34671941267" style="color: var(--white-60); font-size: 0.9rem; display: flex; align-items: center; gap: 8px; margin-top: 12px; text-decoration: none;">
+            <img src="https://flagcdn.com/w20/es.png" srcset="https://flagcdn.com/w40/es.png 2x" width="20" alt="Espanha">
+            +34 671 94 12 67
+          </a></li>
         </ul>
       </div>
       <div class="footer__col">
