--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -1288,11 +1288,11 @@
         if (durationText === '12') {
             if(summaryPrice) summaryPrice.textContent = '€149,00/mês';
             if(summaryTotal) summaryTotal.textContent = '€1.788,00';
-            selectedPlanPriceId = 'price_1Qx...'; // Replace with real 12-month Price ID
+            selectedPlanPriceId = 'price_1Qxy9ZUEGWHer1k6eIdkhNm'; // ID do plano de 12 meses
         } else {
+            selectedPlanPriceId = 'price_1QxyAtUEGWHer1k6eYvVrPk'; // ID do plano de 24 meses
             if(summaryPrice) summaryPrice.textContent = '€75,00/mês';
             if(summaryTotal) summaryTotal.textContent = '€1.800,00';
-            selectedPlanPriceId = 'price_1Qy...'; // Replace with real 24-month Price ID
         }
 
         newBtn2.textContent = 'A guardar...';
