--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -1120,13 +1120,49 @@
 
 </div>
 
-<script type="module">
-  import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm'
-  import { loadStripe } from 'https://cdn.jsdelivr.net/npm/@stripe/stripe-js/+esm'
+<script>
+  // Fallback global function to prevent ReferenceError before module loads or if it crashes
+  window.goTo = function(screenId) {
+    console.warn('Funil module not fully loaded yet. Target:', screenId);
+    // If the module loaded correctly, this function would be overwritten.
+    // If we are here, something might be wrong or it's just slow.
+    const target = document.getElementById('screen-' + screenId);
+    if(target) {
+        document.querySelectorAll('.screen').forEach(s => s.classList.remove('active'));
+        target.classList.add('active');
+        target.style.display = 'block';
+        window.scrollTo(0,0);
+    } else {
+        console.error('Screen not found:', screenId);
+    }
+  };
+</script>
 
-  const supabaseUrl = import.meta.env.VITE_SUPABASE_URL
-  const supabaseAnonKey = import.meta.env.VITE_SUPABASE_ANON_KEY
-  const supabase = createClient(supabaseUrl, supabaseAnonKey)
+<script type="module">
+  import { createClient } from 'https://esm.sh/@supabase/supabase-js@2'
+  import { loadStripe } from 'https://esm.sh/@stripe/stripe-js@2'
+
+  // Safe environment access
+  const getEnv = (key) => {
+    try {
+      return import.meta.env[key]
+    } catch (e) {
+      console.warn('Env var access failed:', key);
+      return undefined;
+    }
+  }
+
+  const supabaseUrl = getEnv('VITE_SUPABASE_URL');
+  const supabaseAnonKey = getEnv('VITE_SUPABASE_ANON_KEY');
+  
+  let supabase = null;
+  if (supabaseUrl && supabaseAnonKey) {
+    try {
+        supabase = createClient(supabaseUrl, supabaseAnonKey)
+    } catch (e) {
+        console.error('Supabase init failed:', e);
+    }
+  }
 
   // Initialize Stripe (Production Key)
   const stripePromise = loadStripe('pk_live_51T4kqUEGWHer1k6eO5Cd78vy9ybpe6OyJPoxrtktomzhu1RQvdoFlPkrLfxMKYoBk2CdmgkI3WRrKZ6vh8XgqQ2h00efKSW7Mn'); 
