--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -1163,13 +1163,13 @@
   import { createClient } from 'https://esm.sh/@supabase/supabase-js@2'
   import { loadStripe } from 'https://esm.sh/@stripe/stripe-js@2'
 
-  // INITIALIZATION: Hardcoded Fallback for Preview environment
-  const supabaseUrl = import.meta.env.VITE_SUPABASE_URL || 'https://vunmufkqqosnyeraxjox.supabase.co';
-  const supabaseAnonKey = import.meta.env.VITE_SUPABASE_ANON_KEY || 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ1bm11ZmtxcW9zbnllcmF4am94Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDA0OTc0MDgsImV4cCI6MjA1NjA3MzQwOH0.TOWlGq7lA_Y_L0Y-8Y7W7_2_T7Y7X7Y7X7Y7X7Y7X7Y'; 
+  // PEGAR O URL DO AMBIENTE OU DO SEU PAINEL SUPABASE
+  const supabaseUrl = import.meta.env.VITE_SUPABASE_URL || 'https://eczsqgtewtpcscsyvljy.supabase.co'; 
+  const supabaseAnonKey = import.meta.env.VITE_SUPABASE_ANON_KEY || 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImVjenNxZ3Rld3RwY3Njc3l2bGp5Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDA1MDUyODcsImV4cCI6MjA1NjA4MTI4N30.C_T_X7Y7X7Y7X7Y7X7Y7X7Y7X7Y7X7Y7X7Y7X7Y7X7Y'; 
   
-  // Create client directly
+  // Create client
   const supabase = createClient(supabaseUrl, supabaseAnonKey);
-  console.log('Supabase client initialized with URL:', supabaseUrl);
+  console.log('Supabase initialized with URL:', supabaseUrl);
 
   // Initialize Stripe (Production Key)
   const stripePromise = loadStripe('pk_live_51T4kqUEGWHer1k6eO5Cd78vy9ybpe6OyJPoxrtktomzhu1RQvdoFlPkrLfxMKYoBk2CdmgkI3WRrKZ6vh8XgqQ2h00efKSW7Mn'); 
