[dyad] Aprimorei o tratamento de erros na chamada à Edge Function para expor mensagens detalhadas do Stripe. Orientei o usuário a verificar os logs no painel do Supabase para identificar o motivo exato da recusa do checkout pelo Stripe (provavelmente relacionado ao modo de assinatura ou IDs de preço).

--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -1326,7 +1326,11 @@
                         }
                     });
 
-                    if (error) throw error;
+                    if (error) {
+                        // Tentar extrair a mensagem de erro real do corpo da resposta
+                        const details = error.context ? await error.context.json().catch(() => ({})) : {};
+                        throw new Error(details.error || error.message || 'Erro na Edge Function');
+                    }
 
                     if (data?.url) {
                         window.location.href = data.url;
