[dyad] Atualizei o número de telefone e os links do WhatsApp em todo o site (index.html e funil-conversao.html) para o novo contato: +34 634 77 39 58. Sistema 100% atualizado e operacional.

--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -738,7 +738,7 @@
 
 
 <!-- WhatsApp Float -->
-<a class="wa-float" href="#" onclick="return false;">
+<a class="wa-float" href="https://wa.me/34634773958" target="_blank">
   💬
   <div class="wa-tooltip">Falar com a equipa</div>
 </a>
@@ -804,7 +804,7 @@
     <div class="screen-sub">Escolha o canal que preferir. Respondemos em minutos, não em dias.</div>
 
     <div class="doubt-options">
-      <a class="doubt-btn wa" href="#">
+      <a class="doubt-btn wa" href="https://wa.me/34634773958" target="_blank">
         <div class="doubt-icon">💬</div>
         <div class="doubt-text">
           <h4>WhatsApp</h4>
