--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -593,35 +593,40 @@
     /* ── WHATSAPP FLOAT ── */
     .wa-float {
       position: fixed; bottom: 24px; right: 24px;
-      width: 56px; height: 56px;
-      background: var(--whatsapp);
-      border-radius: 50%;
-      display: flex; align-items: center; justify-content: center;
-      cursor: pointer;
-      box-shadow: 0 4px 20px rgba(37, 211, 102, 0.4);
-      transition: all 0.3s;
-      z-index: 100;
-      font-size: 1.6rem;
+      background: #25D366;
       color: white;
+      padding: 1rem;
+      border-radius: 9999px;
+      box-shadow: 0 10px 25px -5px rgba(37, 211, 102, 0.4);
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
       text-decoration: none;
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      z-index: 100;
+      border: none;
+      cursor: pointer;
     }
     .wa-float:hover {
-      transform: scale(1.08);
-      box-shadow: 0 6px 28px rgba(37, 211, 102, 0.5);
+      background: #22c35e;
+      transform: translateY(-2px) scale(1.05);
+      box-shadow: 0 20px 25px -5px rgba(37, 211, 102, 0.4);
     }
-    .wa-tooltip {
-      position: absolute; right: 68px; top: 50%; transform: translateY(-50%);
-      background: var(--white);
-      color: var(--navy-deep);
-      font-size: 0.78rem; font-weight: 600;
-      padding: 0.5rem 0.85rem;
-      border-radius: 8px;
+    .wa-float .wa-text {
+      max-width: 0;
+      overflow: hidden;
       white-space: nowrap;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.15);
-      opacity: 0; pointer-events: none;
-      transition: opacity 0.3s;
+      transition: max-width 0.5s ease;
+      font-weight: 600;
+      font-size: 0.9rem;
     }
-    .wa-float:hover .wa-tooltip { opacity: 1; }
+    .wa-float:hover .wa-text {
+      max-width: 200px;
+    }
+    .wa-icon {
+      width: 24px; height: 24px;
+      display: flex; align-items: center; justify-content: center;
+    }
 
     /* ── DOUBT SCREEN ── */
     .doubt-options {
@@ -772,9 +777,11 @@
 
 
 <!-- WhatsApp Float -->
-<a class="wa-float" href="https://wa.me/34634773958" target="_blank">
-  💬
-  <div class="wa-tooltip">Falar com a equipa</div>
+<a href="https://wa.me/34634773958" target="_blank" class="wa-float group">
+  <span class="wa-text">Falar no WhatsApp</span>
+  <div class="wa-icon">
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.437 5.634 1.437h.005c6.558 0 11.894-5.335 11.897-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+  </div>
 </a>
 
 <div class="funnel-wrap">
