--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <meta name="description"
     content="WEKOTA – Plataforma europeia estruturada de aquisição coletiva para o iPhone 17 Pro Max.">
   <title>WEKOTA | iPhone 17 Pro Max</title>
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-S285WX7BLZ"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-S285WX7BLZ');
+  </script>
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
